example/valid/pairs/erasedPairAssign.wacc
# Erased pair assignment is legal even types don't match

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  pair(int, int) p = newpair(4, 5);
  pair(pair, int) q = newpair(p, 6);
  fst fst q = 'a'
end
